# BloodborneMake

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  paket.dependencies
dependencies/: SoulsFormats.BUILD  paket.references
dependencies/nuget/: paket.main.bzl
dependencies/patches/: csharp_support.patch  shift-jis.patch
src/antlr/: BUILD  ESDLexer.g4  ESDParser.g4
src/translators/fromscript2gd/: BUILD  Program.cs
